k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxicab-ENVIRONMENT-BUILD_NUMBER
spec:
  selector:
    matchLabels:
      app: taxicab-ENVIRONMENT-BUILD_NUMBER
  replicas: 1
  template:
    metadata:
      labels:
        app: taxicab-ENVIRONMENT-BUILD_NUMBER
        version: "BUILD_NUMBER"
    spec:
      #serviceAccountName: my-serviceaccount
      #automountServiceAccountToken: true
      containers:
      - name: taxicab-ENVIRONMENT-BUILD_NUMBER
        image: IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
