k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=30
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/tags: "Environment=ENVIRONMENT"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/success-codes: '401'  # health check via swagger requires auth which is no supported in alb checks, hence this hack for testing
  name: taxicab-ENVIRONMENT-BUILD_NUMBER
  namespace: default
spec:
  rules:
    - host: green.granite-cloud.org
      http:
        paths:
          - path: /
            backend:
              serviceName: taxicab-ENVIRONMENT-BUILD_NUMBER
              servicePort: 80
